# render_engine

./: CMakeLists.txt  README.md  obiect.cpp  obiect.h  resources.h  testing.cpp
.qt/: QtDeploySupport.cmake
MainWindow/: CMakeLists.txt  ext_resources.h
MainWindow/inc/: main_window.h  main_window_par.h  render_window.h  resources.h
MainWindow/src/: CMakeLists.txt  main_window.cpp  render_window.cpp  testing.cpp
inc/: front_resources.h  interface.h
logic/: CMakeLists.txt  sources.h
logic/inc/: logic.h  resources.h
logic/logic/: CMakeLists.txt
logic/logic/inc/: Scene.h  camera.h  hittable.h  hittable_list.h  material.h  moving_sphere.h  ray.h  resources.h  sphere.h  triangle.h  vec3.h  vector3.h
logic/logic/src/: CMakeLists.txt  Scene.cpp  camera.cpp  hittable.cpp  hittable_list.cpp  material.cpp  moving_sphere.cpp  ray.cpp  sphere.cpp  testing.cpp  triangle.cpp  vec3.cpp  vector3.cpp
logic/scenes/: README.md
logic/scenes/Scene Monkey/: monkey.mtl
logic/scenes/Scene0/: cube.mtl
logic/src/: CMakeLists.txt  logic.cpp  testing.cpp
src/: CMakeLists.txt  interface.cpp  main.cpp
ui/: CMakeLists.txt  main_window.cpp  main_window.h  main_window_par.h  resources.h  ui_main_window.h
